# ihd-replacement

./: .env  .gitignore  Cargo.toml  README.md  deploy-pi.sh
data/: agile.json
data/agile/: 2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json
src/: agile.rs  app_state.rs  dashboard.rs  handlers.rs  history.rs  home_assistant.rs  lib.rs  main.rs  models.rs  refresh.rs  scheduler.rs  settings.rs
static/: index.html
static/css/: agile.css  app.css  appliance.css  battery.css  costs.css  gauge.css  history.css  house-usage.css  settings.css  solar.css
static/js/: agile.js  app.js  costs.js  dashboard.js  history.js  settings.js  state.js  utils.js
static/partials/: cost-usage-modal.html  history-modal.html  settings-modal.html
