[package]
name = "agile-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
